@@ -1,69 +1,36 @@
 package com.example.demo.controller;
 
-import com.example.demo.dto.*;
-import com.example.demo.entity.User;
-import com.example.demo.repository.UserRepository;
-import com.example.demo.service.UserService;
+import com.example.demo.entity.*;
+import com.example.demo.repository.*;
 import com.example.demo.util.JwtUtil;
-import org.springframework.http.ResponseEntity;
-import org.springframework.security.authentication.*;
-import org.springframework.security.core.Authentication;
-import org.springframework.security.core.context.SecurityContextHolder;
+import lombok.RequiredArgsConstructor;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.web.bind.annotation.*;
 import java.util.*;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/auth")
+@RequiredArgsConstructor
 public class AuthController {
-    private final AuthenticationManager authManager;
-    private final JwtUtil jwtUtil;
-    private final UserService userService;
     private final UserRepository userRepo;
-
-    public AuthController(AuthenticationManager authManager, JwtUtil jwtUtil, UserService userService, UserRepository userRepo) {
-        this.authManager = authManager;
-        this.jwtUtil = jwtUtil;
-        this.userService = userService;
-        this.userRepo = userRepo;
-    }
+    private final JwtUtil jwtUtil;
+    private final PasswordEncoder passwordEncoder;
 
     @PostMapping("/register")
-    public ResponseEntity<?> register(@RequestBody RegisterRequest request) {
-        try {
-            // 1. Call Service with DTO
-            User user = userService.registerUser(request);
-
-            // 2. Map to DTO/Map (Prevents StackOverflow / JSON Errors)
-            Map<String, Object> response = new LinkedHashMap<>();
-            response.put("id", user.getId());
-            response.put("email", user.getEmail());
-            response.put("name", user.getName());
-            response.put("status", "success");
-            
-            return ResponseEntity.ok(response);
-
-        } catch (Exception e) {
-            e.printStackTrace();
-            return ResponseEntity.badRequest().body(Collections.singletonMap("error", e.getMessage()));
-        }
+    public Map<String,Object> register(@RequestBody User u) {
+        u.setPassword(passwordEncoder.encode(u.getPassword()));
+        userRepo.save(u);
+        return Map.of("email", u.getEmail());
     }
 
     @PostMapping("/login")
-    public ResponseEntity<?> login(@RequestBody AuthRequest req) {
-        try {
-            Authentication authentication = authManager.authenticate(
-                    new UsernamePasswordAuthenticationToken(req.getEmail(), req.getPassword()));
-            
-            SecurityContextHolder.getContext().setAuthentication(authentication);
-
-            User user = userRepo.findByEmail(req.getEmail()).orElseThrow();
-            Set<String> roles = user.getRoles().stream().map(r -> r.getName()).collect(Collectors.toSet());
-            String token = jwtUtil.generateToken(user.getEmail(), user.getId(), roles);
-            
-            return ResponseEntity.ok(new AuthResponse(token, user.getId(), user.getEmail(), roles));
-        } catch (Exception e) {
-            return ResponseEntity.status(401).body(Collections.singletonMap("error", "Invalid credentials"));
-        }
+    public Map<String,Object> login(@RequestBody Map<String,String> creds) {
+        User u = userRepo.findByEmail(creds.get("email")).orElseThrow(() -> new RuntimeException("User not found"));
+        if(!passwordEncoder.matches(creds.get("password"), u.getPassword())) throw new RuntimeException("Bad creds");
+        
+        Set<String> roles = new HashSet<>();
+        u.getRoles().forEach(r -> roles.add(r.getName()));
+        String token = jwtUtil.generateToken(u.getEmail(), u.getId(), roles);
+        return Map.of("token", token, "email", u.getEmail(), "userId", u.getId());
     }
 }
